[package]
name = "expr_parser"
version = "0.1.0"
authors = ["Vsevolod Galaktionov <vsevolodg@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "mylib"
path = "src/lib.rs"

[[bin]]
name = "mybin"
path = "src/bin.rs"

[dependencies]
